update site rendering and add github deployment